# nhq

./: AGENTS.md  CHANGELOG.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.out-of-scope/: global-store-enumeration.md
docs/adr/: 0004-exclude-only-and-no-auto-init.md  0006-list-defaults-to-current-repo.md  0007-store-is-a-mirror-tree-of-managed-paths.md  0008-manifest-records-the-managed-set.md  0009-migrate-replaces-init-and-refuses-tracked-paths.md  0010-rename-nhq-to-ihq.md  0011-migratable-lists-untracked-too-but-ihq-stays-ihq.md
ihq/: __init__.py  __main__.py  _cli.py  _git.py  _store.py
nhq/: __main__.py  _cli.py  _git.py  _store.py
tests/: conftest.py
tests/e2e/: conftest.py  error_test.py  init_test.py  link_test.py  list_test.py  main_test.py  migratable_test.py  migrate_test.py  path_test.py  root_test.py  unlink_test.py
tests/unit/_cli/: exclude_line_test.py
tests/unit/_git/: git_error_test.py  is_excluded_test.py  remove_excluded_test.py
tests/unit/_store/: decode_subpath_test.py  manifest_test.py  parse_remote_test.py  resolve_root_test.py  scan_test.py  store_path_test.py  to_managed_path_test.py
